Update a bunch of icons and empty-space fieldset css rules

--- a/khyeras/_dev/styles/khyeras_v1/template/overall_header.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/overall_header.html
@@ -90,7 +90,7 @@
 			<nav id="mobile-menu">
 				<header class="mobile-menu-header">
 					<span class="mobile-header">Menu</span>
-					<i class="icon fa fa-times" aria-hidden="true"></i>
+					<i class="icon fa-close" aria-hidden="true"></i>
 				</header>
 				<div class="mobile-menu-content"></div>
 			</nav>
