--- a/khyeras/_dev/styles/khyeras_v1/template/partials/breadcrumbs.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/partials/breadcrumbs.html
@@ -9,7 +9,7 @@
 		{% endif %}
 		{% spaceless %}
 			<li class="crumb{% if crumb_label == 'Home' %} home{% endif %}" itemtype="http://schema.org/ListItem" itemprop="itemListElement" itemscope{{ navdata }}>
-				<i class="icon {% if crumb_label == 'Home' %}rpg-icon rpg-castle{% else %}fa-chevron-right fa-fw{% endif %}"></i>
+				<i class="icon {% if crumb_label == 'Home' %}rpg-icon rpg-castle{% else %}fa-angle-right fa-fw{% endif %}"></i>
 				<a href="{{ crumb_url }}" itemprop="url"{{ a_attr }}>
 					<span itemprop="title">{{ crumb_label }}</span>
 				</a>
