--- a/khyeras/_dev/styles/khyeras_v1/template/partials/pages_half_breed.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/partials/pages_half_breed.html
@@ -2,19 +2,19 @@
 	'Dragon' : [
 		{
 			title : 'Not Applicable',
-			icon : 'icon-bg-red fa-remove',
+			icon : 'icon-bg-red fa-close',
 			description : '<em>Cannot create a Half-Breed with this race!</em> Dragons limit reproduction to their own kind. They have experimented allowing humans to use their blood to create the Ue\'drahc, but this genesis is not utilized presently.'
 		}
 	],
 	'Dwarf' : [
 		{
 			title : 'Elemental',
-			icon : 'icon-bg-red fa-remove',
+			icon : 'icon-bg-red fa-close',
 			description : 'No. This race contains too many arcane and whimsical properties.'
 		},
 		{
 			title : 'Fae',
-			icon : 'icon-bg-red fa-remove',
+			icon : 'icon-bg-red fa-close',
 			description : 'No. Not interested in races with heavy magical influence.'
 		},
 		{
@@ -29,7 +29,7 @@
 		},
 		{
 			title : 'Lumeacia',
-			icon : 'icon-bg-red fa-remove',
+			icon : 'icon-bg-red fa-close',
 			description : 'No. Not interested in races with heavy magical influence.'
 		},
 		{
@@ -39,14 +39,14 @@
 		},
 		{
 			title : 'Ue\'drahc',
-			icon : 'icon-bg-red fa-remove',
+			icon : 'icon-bg-red fa-close',
 			description : 'No. Reptilian humans are imposing, tall, and scaly.'
 		}
 	],
 	'Elemental' : [
 		{
 			title : 'Dwarf',
-			icon : 'icon-bg-red fa-remove',
+			icon : 'icon-bg-red fa-close',
 			description : 'No. Dwarves haven\'t made an alliance acceptable.'
 		},
 		{
@@ -76,14 +76,14 @@
 		},
 		{
 			title : 'Ue\'drahc',
-			icon : 'icon-bg-red fa-remove',
+			icon : 'icon-bg-red fa-close',
 			description : 'No. Though there are no ill feelings, the partnership is not considered.'
 		}
 	],
 	'Fae' : [
 		{
 			title : 'Dwarf',
-			icon : 'icon-bg-red fa-remove',
+			icon : 'icon-bg-red fa-close',
 			description : 'No. Dwarves haven\'t made an alliance acceptable.'
 		},
 		{
@@ -103,7 +103,7 @@
 		},
 		{
 			title : 'Lumeacia',
-			icon : 'icon-bg-red fa-remove',
+			icon : 'icon-bg-red fa-close',
 			description : 'No. There is tension due to the Kerasoka alliance.'
 		},
 		{
@@ -113,14 +113,14 @@
 		},
 		{
 			title : 'Ue\'drahc',
-			icon : 'icon-bg-red fa-remove',
+			icon : 'icon-bg-red fa-close',
 			description : 'No. Though there are no ill feelings, the partnership is not considered.'
 		}
 	],
 	'Ghost' : [
 		{
 			title : 'Not Applicable',
-			icon : 'icon-bg-red fa-remove',
+			icon : 'icon-bg-red fa-close',
 			description : '<em>Cannot create a Half-Breed with this race!</em> A being is either dead or not-dead; there is no in-between. Ghosts derive from the passing of select races: Lumeacia, Kerasoka, Shapeshifter, Dwarf, or Human.'
 		}
 	],
@@ -147,7 +147,7 @@
 		},
 		{
 			title : 'Lumeacia',
-			icon : 'icon-bg-red fa-remove',
+			icon : 'icon-bg-red fa-close',
 			description : 'No. These elves see no benefit to coalescing with Humans.'
 		},
 		{
@@ -194,21 +194,21 @@
 		},
 		{
 			title : 'Ue\'drahc',
-			icon : 'icon-bg-red fa-remove',
+			icon : 'icon-bg-red fa-close',
 			description : 'No. Though there are no ill feelings, the partnership is not considered.'
 		}
 	],
 	'Korcai' : [
 		{
 			title : 'Not Applicable',
-			icon : 'icon-bg-red fa-remove',
+			icon : 'icon-bg-red fa-close',
 			description : '<em>Cannot create a Half-Breed with this race!</em> Folk who are bitten and turned by the Korcai virus are completely altered. Once transformed, the infected lose any capabilities and appearances of their former race.'
 		}
 	],
 	'Lumeacia' : [
 		{
 			title : 'Dwarf',
-			icon : 'icon-bg-red fa-remove',
+			icon : 'icon-bg-red fa-close',
 			description : 'No. The feeling of dislike is mutual between the two.'
 		},
 		{
@@ -218,12 +218,12 @@
 		},
 		{
 			title : 'Fae',
-			icon : 'icon-bg-red fa-remove',
+			icon : 'icon-bg-red fa-close',
 			description : 'No. There is tension due to the Kerasoka alliance.'
 		},
 		{
 			title : 'Human',
-			icon : 'icon-bg-red fa-remove',
+			icon : 'icon-bg-red fa-close',
 			description : 'No. There is no curiosity or passion with races that may struggle with magic.'
 		},
 		{
@@ -233,12 +233,12 @@
 		},
 		{
 			title : 'Shapeshifter',
-			icon : 'icon-bg-red fa-remove',
+			icon : 'icon-bg-red fa-close',
 			description : 'No. There is no curiosity or passion with races that may struggle with magic.'
 		},
 		{
 			title : 'Ue\'drahc',
-			icon : 'icon-bg-red fa-remove',
+			icon : 'icon-bg-red fa-close',
 			description : 'No. They do not detest Ue\'drahc, but the product of their union could be an abomination.'
 		}
 	],
@@ -270,29 +270,29 @@
 		},
 		{
 			title : 'Lumeacia',
-			icon : 'icon-bg-red fa-remove',
+			icon : 'icon-bg-red fa-close',
 			description : 'No. Largely because of Lumeacia opinion, these elves are avoided.'
 		},
 		{
 			title : 'Ue\'drahc',
-			icon : 'icon-bg-red fa-remove',
+			icon : 'icon-bg-red fa-close',
 			description : 'No. Though there are no ill feelings, the partnership is not considered.'
 		}
 	],
 	'Ue\'drahc' : [
 		{
 			title : 'Dwarf',
-			icon : 'icon-bg-red fa-remove',
+			icon : 'icon-bg-red fa-close',
 			description : 'No. Though there are no ill feelings, the partnership is not considered.'
 		},
 		{
 			title : 'Elemental',
-			icon : 'icon-bg-red fa-remove',
+			icon : 'icon-bg-red fa-close',
 			description : 'No. Though there are no ill feelings, the partnership is not considered.'
 		},
 		{
 			title : 'Fae',
-			icon : 'icon-bg-red fa-remove',
+			icon : 'icon-bg-red fa-close',
 			description : 'No. Though there are no ill feelings, the partnership is not considered.'
 		},
 		{
@@ -302,17 +302,17 @@
 		},
 		{
 			title : 'Kerasoka',
-			icon : 'icon-bg-red fa-remove',
+			icon : 'icon-bg-red fa-close',
 			description : 'No. Though there are no ill feelings, the partnership is not considered.'
 		},
 		{
 			title : 'Lumeacia',
-			icon : 'icon-bg-red fa-remove',
+			icon : 'icon-bg-red fa-close',
 			description : 'No. Though there are no ill feelings, the partnership is not considered.'
 		},
 		{
 			title : 'Shapeshifter',
-			icon : 'icon-bg-red fa-remove',
+			icon : 'icon-bg-red fa-close',
 			description : 'No. Though there are no ill feelings, the partnership is not considered.'
 		},
 	]
