--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_form-fields.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_form-fields.scss
@@ -46,10 +46,10 @@ fieldset {
 
 select {
 	padding-right: 30px;
-	background-image: url($images + 'chevron-down.png');
+	background-image: url($images + 'angle-down.svg');
 	background-repeat: no-repeat;
-	background-position: right 10px center;
-	background-size: auto 10px;
+	background-position: right 16px center;
+	background-size: auto 16px;
 	option {
 		color: $color-06;
 	}
@@ -276,16 +276,17 @@ fieldset:not(.polls) {
 .cp-main #avatar_option_avatar_driver_gravatar fieldset,
 .section-ucp-manage-groups .cp-main fieldset,
 .section-mcp-view-topic .cp-main #display-panel {
-	 dl dd.has-multiple-fields.has-space {
+	dl dd.has-multiple-fields.has-space {
 		@include reset-font-size('& > *');
 	}
 }
 
-.section-mcp-warnings .cp-main #warning ~,
-.section-ucp-send-password fieldset,
-.section-ucp-send-activation-email fieldset {
+.section-mcp-warnings .cp-main #warning ~, [class*='section-ucp-send-'] fieldset, [class*='section-mcp-approve-'] fieldset, [class*='section-mcp-restore-'] fieldset {
 	dl dt.empty-space {
 		display: none;
+		& + dd {
+			margin-left: 0;
+		}
 	}
 }
 
