--- a/khyeras/styles/khyeras_v1/template/partials/nav_menu_02.html
+++ b/khyeras/styles/khyeras_v1/template/partials/nav_menu_02.html
@@ -17,7 +17,7 @@
 						<span>{{ lang('NOTIFICATIONS') }}</span>
 						{{ function.display_counts(NOTIFICATIONS_COUNT) }}
 					</a>
-					<i class="icon icon-lg fa-chevron-down menu-trigger mobile-menu-trigger"></i>
+					<i class="icon icon-lg fa-angle-down menu-trigger mobile-menu-trigger"></i>
 				</div>
 				{% include 'notification_dropdown.html' %}
 			</li>
@@ -28,7 +28,7 @@
 					<span class="user-name">{{ CURRENT_USERNAME_SIMPLE }}</span>
 					{{ function.display_avatar(CURRENT_USER_AVATAR, T_THEME_PATH) }}
 				</a>
-				<i class="icon icon-lg fa-chevron-down menu-trigger mobile-menu-trigger"></i>
+				<i class="icon icon-lg fa-angle-down menu-trigger mobile-menu-trigger"></i>
 			</div>
 			<div class="dropdown">
 				<ul class="dropdown-contents" role="menu">
