--- a/khyeras/_dev/styles/khyeras_v1/template/partials/nav_menu_02.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/partials/nav_menu_02.html
@@ -3,8 +3,8 @@
 		{% if S_DISPLAY_PM %}
 			<li>
 				<div class="menu-label">
-					<a href="{{ U_PRIVATEMSGS }}" title="{{ lang('PRIVATE_MESSAGES') }}">
-						<span>{{ lang('PRIVATE_MESSAGES') }}</span>
+					<a href="{{ U_PRIVATEMSGS }}" title="{{ lang('MESSAGES') }}">
+						<span>{{ lang('MESSAGES') }}</span>
 						{{ function.display_counts(PRIVATE_MESSAGE_COUNT) }}
 					</a>
 				</div>
