--- a/khyeras/styles/khyeras_v1/template/overall_footer.html
+++ b/khyeras/styles/khyeras_v1/template/overall_footer.html
@@ -145,11 +145,13 @@
 
 	<!-- EVENT overall_footer_body_after -->
 
-	<a href="#" class="scroll-to-top" title="Scroll to Top">
-		<i class="icon icon-lg fa-angle-up" aria-hidden="true"></i>
-	</a>
-	<a href="#" class="scroll-to-bottom" title="Scroll to Bottom">
-		<i class="icon icon-lg fa-angle-down" aria-hidden="true"></i>
-	</a>
+	<div class="scroll-to-links">
+		<a href="#" class="scroll-to-top" title="Scroll to Top">
+			<i class="icon icon-lg fa-angle-up" aria-hidden="true"></i>
+		</a>
+		<a href="#" class="scroll-to-bottom" title="Scroll to Bottom">
+			<i class="icon icon-lg fa-angle-down" aria-hidden="true"></i>
+		</a>
+	</div>
 </body>
 </html>
