Update smilies, emojis, icon colors, and fonts

--- a/khyeras/_dev/styles/khyeras_v1/template/overall_footer.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/overall_footer.html
@@ -34,7 +34,7 @@
 								<span class="bullet">&bull;</span>
 								<!-- IF not S_IS_BOT -->
 									<a href="{U_DELETE_COOKIES}">
-										<i class="icon icon-lg rpg-icon rpg-burning-embers" aria-hidden="true"></i> {L_DELETE_COOKIES}
+										<i class="icon icon-lg rpg-icon rpg-fire" aria-hidden="true"></i> {L_DELETE_COOKIES}
 									</a>
 								<!-- ENDIF -->
 							</p>
