--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
@@ -306,6 +306,14 @@ a.top {
 			@include toggle-content(show, $transition: true);
 		}
 	}
+
+	.section-page-glossary .quick-links {
+		width: 175px;
+		a {
+			display: inline-block;
+			width: 22.5%;
+		}
+	}
 }
 
 /* Main Boxes (Inner)
