--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_colors.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_colors.scss
@@ -15,8 +15,8 @@ $color-10: #777777; // search-box icon, icon gray
 $color-11: #aaaaaa; // disabled form field, search-box icon hover
 $color-12: #f19051; // icon orange, star topic icon
 $color-13: #5e6c85; // icon bluegray
-$color-14: #d6bf4c; // icon yellow
-$color-15: #4d2e56; // icon purple
+$color-14: #e2c005; // icon yellow
+$color-15: #603a6b; // icon purple
 $color-16: #666666; // print.css main color
 $color-17: #73abd0; // topic mention, user colors
 $color-18: #a0b8e6; // platinum
